--- a/lib/chirp_web/live/link_live/index.html.heex
+++ b/lib/chirp_web/live/link_live/index.html.heex
@@ -1,3 +1,25 @@
-<div :for={link <- @links}>
-  <%= link.url %>
+<div class="flex gap-2 flex-col">
+  <h1 class="grow text-2xl font-bold mb-6">Create a new link</h1>
+  <.form for={@form} phx-submit="submit">
+    <div class="flex gap-2 items-end justify-between">
+      <div class="w-96">
+        <.input field={@form[:url]} type="text" label="URL" />
+      </div>
+      <button class="bg-black border border-black hove:bg-gray-700 text-white font-bold py-2 px-3 rounded-md">
+        Create
+      </button>
+    </div>
+  </.form>
+  <div class="flex">
+    <h1 class="grow text-2xl font-bold">Links</h1>
+    <.link
+      class="bg-black border border-black hove:bg-gray-700 text-white font-bold py-2 px-3 rounded-md"
+      navigate={~p"/links/new"}
+    >
+      Add Link
+    </.link>
+  </div>
+  <div :for={link <- @links}>
+    <%= link.url %>
+  </div>
 </div>
